# shipstory

./: .gitignore  CURRENT-ROADMAP.MD  README.md  landingpage-design-guide.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml
agents/: .env.example  README.md  agent_config.yaml.example  pyproject.toml  run_agents.py  trigger_chat.py  trigger_commit.py
agents/connie_assistant/: __init__.py  agent.py  pyproject.toml
agents/devin_eng/: __init__.py  agent.py  pyproject.toml
agents/gigi_marketing/: __init__.py  agent.py  pyproject.toml
agents/marshall_research/: __init__.py  agent.py  pyproject.toml
agents/priscilla_product/: __init__.py  agent.py  pyproject.toml
agents/shared/: cloudinary_helper.py  company_brain_db.json  deterministic_adapter.py  image_provider.py  jina_helper.py  llm_provider.py  pyproject.toml  state_manager.py  tavily_helper.py
agents/shared/company_profile_templates/: brand_guidelines.txt  current_milestones.json  pitch_deck_raw.txt  product_requirement_document.md
agents/shared/shared.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
agents/vinci_design/: __init__.py  agent.py  pyproject.toml
apps/web/: .env.example  components.json  design-guide.md  package.json  tsconfig.tsbuildinfo
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/approve/: route.ts
apps/web/src/app/api/brain/: route.ts
apps/web/src/app/api/chat/: route.ts
apps/web/src/app/api/onboard/: route.ts
apps/web/src/app/api/settings/: route.ts
apps/web/src/app/api/webhook/: route.ts
apps/web/src/app/dashboard/: page.tsx
apps/web/src/components/landing/: AboutSection.tsx  Connector.tsx  Hero.tsx  LogoStrip.tsx  Navbar.tsx  NodeCard.tsx  WalkthroughModal.tsx  WorkflowCanvas.tsx
apps/web/src/components/ui/: button.tsx
apps/web/src/hooks/: useBandSocket.ts
apps/web/src/lib/: mongodb.ts  tokens.ts
docs/: hackathon_battle_plan.md  hostinger-vps-python-agents-deploy-guide.md  investor_prd.md  jina-scraper.md  pitch_deck_and_demo.md  technical_prd.md  vps-deploy-guide.md  walkthrough_video_script.md
