[project]
name = "priscilla_product"
version = "0.1.0"
description = "Priscilla Product agent package"
requires-python = ">=3.11"
dependencies = [
    "shared",
    "band-sdk[crewai]>=1.0.0",   # ← Add
    "python-dotenv>=1.2.2",       # ← Add for consistency
]

[tool.uv.sources]
shared = { workspace = true }
